--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <section class="elements" aria-label="Карточки с фотографиями">
                 <ul class="cards">
                     <li class="cards__item">
-                    <img class="cards__photo" src="./images/байкал.jpeg" alt="Байкал">
+                    <img class="cards__photo" src="./images/baikal.jpeg" alt="Байкал">
                     <div class="cards__description">
                         <h2 class="cards__text">Озеро Байкал</h2>
                         <button class="cards__like-button cards__like-button_active" type="button" aria-label="Нравится"></button>
