--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h1 class="profile__username">Жак-Ив Кусто<button class="profile__button" type="button"><img class="profile__edit-button" src="./images/Edit Button.svg" aria-label="Редактировать"></h1></button>
                     <p class="profile__description">Исследователь океана</p>
                 </div>
-                <button class="profile__button" type="botton"><img class="profile__add-button" src="./images/Add Button.svg" type="button" aria-label="Добавить"></button>
+                <button class="profile__button" type="button"><img class="profile__add-button" src="./images/Add Button.svg" type="button" aria-label="Добавить"></button>
             </section>
                 
 
