--- a/index.html
+++ b/index.html
@@ -25,12 +25,17 @@
             <section class="profile" aria-label="Профиль пользователя">
                 <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар">
                 <div class="profile__info">
-                    <h1 class="profile__username">Жак-Ив Кусто<button class="profile__button" type="button"><img class="profile__edit-button" src="./images/Edit Button.svg" aria-label="Редактировать"></h1></button>
+                    <div class="profile__name">
+                    <h1 class="profile__username">Жак-Ив Кусто</h1>
+                    <button class="profile__edit-button" type="button" aria-label="Редактировать"></button>
+                </div>
                     <p class="profile__description">Исследователь океана</p>
                 </div>
-                <button class="profile__button" type="button"><img class="profile__add-button" src="./images/Add Button.svg" type="button" aria-label="Добавить"></button>
+                <button class="profile__add-button" type="button"></button>
             </section>
                 
+
+
 
 
             <section class="elements" aria-label="Карточки с фотографиями">
