--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <form class="popup__forms" action="#" name="profile">
 
-
-                    <input class="popup__form" type="text" name="name" id="name" placeholder="Жак-Ив Кусто" required>
-                    <input class="popup__form" type="text" name="description" id="description"
+                    <fieldset class="popup__form-input">
+                    <input class="popup__form-line" type="text" name="name" id="name" placeholder="Жак-Ив Кусто" required>
+                    <input class="popup__form-line" type="text" name="description" id="description"
                         placeholder="Исследователь океана" required>
-
+                    </fieldset>
                     <button class="popup__save-button" type="submit">Сохранить</button>
-                    <button class="popup__close-button" type="button" aria-label="Закрыть"><img class="popup__close" src="./images/Close-Icon.svg" alt="Иконка закрытия"></button>
                 </form>
+                    <button class="popup__close-button" type="button" aria-label="Закрыть"></button> 
             </div>
         </section>
     </div>
