--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <img class="cards__photo" src="./images/ленские-столбы.jpeg" alt="Ленские столбы">
                         <div class="cards__description">
                             <h2 class="cards__text">Ленские столбы</h2>
-                            <button class="cards__like-button cards__like-button_active" type="button" aria-label="Нравится"></button>
+                            <button class="cards__like-button" type="button" aria-label="Нравится"></button>
                         </div>
                     </li>
                 </ul>
@@ -102,21 +102,21 @@
         </footer>
 
 
-        <section class="popup popup_opened">
+        <div class="popup popup_opened">
             <div class="popup__container">
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <form class="popup__forms" action="#" name="profile">
 
                     <fieldset class="popup__form-input">
-                    <input class="popup__form-line" type="text" name="name" id="name" placeholder="Жак-Ив Кусто" required>
+                    <input class="popup__form-line" type="text" name="name" id="name" placeholder="Ваше имя" required>
                     <input class="popup__form-line" type="text" name="description" id="description"
-                        placeholder="Исследователь океана" required>
+                        placeholder="Ваш род деятельности" required>
                     </fieldset>
                     <button class="popup__save-button" type="submit">Сохранить</button>
                 </form>
                     <button class="popup__close-button" type="button" aria-label="Закрыть"></button> 
             </div>
-        </section>
+        </div>
     </div>
 
 </body>
