--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <img class="cards__photo" src="./images/baikal.jpeg" alt="Байкал">
                         <div class="cards__description">
                             <h2 class="cards__text">Озеро Байкал</h2>
-                            <button class="cards__like-button cards__like-button_active" type="button"
+                            <button class="cards__like-button" type="button"
                                 aria-label="Нравится"></button>
                         </div>
                     </li>
@@ -54,7 +54,7 @@
                         <img class="cards__photo" src="./images/эльбрус.jpeg" alt="Эльбрус">
                         <div class="cards__description">
                             <h2 class="cards__text">Гора Эльбрус</h2>
-                            <button class="cards__like-button cards__like-button_active" type="button"
+                            <button class="cards__like-button" type="button"
                                 aria-label="Нравится"></button>
                         </div>
                     </li>
@@ -64,7 +64,7 @@
                         <img class="cards__photo" src="./images/белуха.jpeg" alt="Белуха">
                         <div class="cards__description">
                             <h2 class="cards__text">Гора Белуха</h2>
-                            <button class="cards__like-button cards__like-button_active" type="button"
+                            <button class="cards__like-button" type="button"
                                 aria-label="Нравится"></button>
                         </div>
                     </li>
@@ -73,7 +73,7 @@
                         <img class="cards__photo" src="./images/тятя.jpeg" alt="вулкан Тятя">
                         <div class="cards__description">
                             <h2 class="cards__text">Вулкан Тятя</h2>
-                            <button class="cards__like-button cards__like-button_active" type="button"
+                            <button class="cards__like-button" type="button"
                                 aria-label="Нравится"></button>
                         </div>
                     </li>
@@ -82,7 +82,7 @@
                         <img class="cards__photo" src="./images/сасык-сиваш.jpeg" alt="озеро Сасык-Сиваш">
                         <div class="cards__description">
                             <h2 class="cards__text">Озеро Сасык-Сиваш</h2>
-                            <button class="cards__like-button cards__like-button_active" type="button"
+                            <button class="cards__like-button" type="button"
                                 aria-label="Нравится"></button>
                         </div>
                     </li>
