--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                         <img class="cards__photo" src="./images/baikal.jpeg" alt="Байкал">
                         <div class="cards__description">
                             <h2 class="cards__text">Озеро Байкал</h2>
-                            <button class="cards__like-button" type="button"
-                                aria-label="Нравится"></button>
+                            <button class="cards__like-button" type="button" aria-label="Нравится"></button>
                         </div>
                     </li>
 
@@ -54,8 +53,7 @@
                         <img class="cards__photo" src="./images/эльбрус.jpeg" alt="Эльбрус">
                         <div class="cards__description">
                             <h2 class="cards__text">Гора Эльбрус</h2>
-                            <button class="cards__like-button" type="button"
-                                aria-label="Нравится"></button>
+                            <button class="cards__like-button" type="button" aria-label="Нравится"></button>
                         </div>
                     </li>
 
@@ -64,8 +62,7 @@
                         <img class="cards__photo" src="./images/белуха.jpeg" alt="Белуха">
                         <div class="cards__description">
                             <h2 class="cards__text">Гора Белуха</h2>
-                            <button class="cards__like-button" type="button"
-                                aria-label="Нравится"></button>
+                            <button class="cards__like-button" type="button" aria-label="Нравится"></button>
                         </div>
                     </li>
 
@@ -73,8 +70,7 @@
                         <img class="cards__photo" src="./images/тятя.jpeg" alt="вулкан Тятя">
                         <div class="cards__description">
                             <h2 class="cards__text">Вулкан Тятя</h2>
-                            <button class="cards__like-button" type="button"
-                                aria-label="Нравится"></button>
+                            <button class="cards__like-button" type="button" aria-label="Нравится"></button>
                         </div>
                     </li>
 
@@ -82,8 +78,7 @@
                         <img class="cards__photo" src="./images/сасык-сиваш.jpeg" alt="озеро Сасык-Сиваш">
                         <div class="cards__description">
                             <h2 class="cards__text">Озеро Сасык-Сиваш</h2>
-                            <button class="cards__like-button" type="button"
-                                aria-label="Нравится"></button>
+                            <button class="cards__like-button" type="button" aria-label="Нравится"></button>
                         </div>
                     </li>
 
@@ -108,13 +103,15 @@
                 <form class="popup__forms" action="#" name="profile">
 
                     <fieldset class="popup__form-input">
-                    <input class="popup__form-line" type="text" name="name" id="name" placeholder="Ваше имя" required>
-                    <input class="popup__form-line" type="text" name="description" id="description"
-                        placeholder="Ваш род деятельности" required>
+                        <input class="popup__form-line" type="text" name="name" id="name" placeholder="Ваше имя"
+                            required>
+                        <input class="popup__form-line" type="text" name="description" id="description"
+                            placeholder="Ваш род деятельности" required>
                     </fieldset>
                     <button class="popup__save-button" type="submit">Сохранить</button>
+                    <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
+
                 </form>
-                    <button class="popup__close-button" type="button" aria-label="Закрыть"></button> 
             </div>
         </div>
     </div>
