--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             <section class="elements" aria-label="Карточки с фотографиями">
                 <ul class="cards">
                     <li class="cards__item">
-                        <img class="cards__photo" src="./images/baikal.jpeg" alt="Байкал">
+                        <button class="cards__delete-button" type="button" title="Удалить"></button>
+                        <img class="cards__photo" src="./images/kamchatka.jpg" alt="Байкал">
                         <div class="cards__description">
                             <h2 class="cards__text">Озеро Байкал</h2>
                             <button class="cards__like-button" type="button" aria-label="Нравится"></button>
@@ -50,6 +51,7 @@
 
 
                     <li class="cards__item">
+                        <button class="cards__delete-button" type="button" title="Удалить"></button>
                         <img class="cards__photo" src="./images/эльбрус.jpeg" alt="Эльбрус">
                         <div class="cards__description">
                             <h2 class="cards__text">Гора Эльбрус</h2>
@@ -59,6 +61,7 @@
 
 
                     <li class="cards__item">
+                        <button class="cards__delete-button" type="button" title="Удалить"></button>
                         <img class="cards__photo" src="./images/белуха.jpeg" alt="Белуха">
                         <div class="cards__description">
                             <h2 class="cards__text">Гора Белуха</h2>
@@ -67,6 +70,7 @@
                     </li>
 
                     <li class="cards__item">
+                        <button class="cards__delete-button" type="button" title="Удалить"></button>
                         <img class="cards__photo" src="./images/тятя.jpeg" alt="вулкан Тятя">
                         <div class="cards__description">
                             <h2 class="cards__text">Вулкан Тятя</h2>
@@ -75,6 +79,7 @@
                     </li>
 
                     <li class="cards__item">
+                        <button class="cards__delete-button" type="button" title="Удалить"></button>
                         <img class="cards__photo" src="./images/сасык-сиваш.jpeg" alt="озеро Сасык-Сиваш">
                         <div class="cards__description">
                             <h2 class="cards__text">Озеро Сасык-Сиваш</h2>
@@ -83,6 +88,7 @@
                     </li>
 
                     <li class="cards__item">
+                        <button class="cards__delete-button" type="button" title="Удалить"></button>
                         <img class="cards__photo" src="./images/ленские-столбы.jpeg" alt="Ленские столбы">
                         <div class="cards__description">
                             <h2 class="cards__text">Ленские столбы</h2>
@@ -92,15 +98,22 @@
                 </ul>
             </section>
         </main>
+
+
         <footer class="footer">
             <p class="footer__copyright">&copy;2022 Mesto Russia</p>
         </footer>
 
 
-        <div class="popup popup_opened">
+
+        <!-- popup edit profile -->
+
+
+        <div class="popup" id="popup-profile">
             <div class="popup__container">
+                <form class="popup__forms" method="post" id="profile-form" action="#" name="profile">
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <form class="popup__forms" action="#" name="profile">
+                
 
                     <fieldset class="popup__form-input">
                         <input class="popup__form-line" type="text" name="name" id="name" placeholder="Ваше имя"
@@ -116,6 +129,52 @@
         </div>
     </div>
 
+
+    <!-- popup mesto -->
+
+    <div class="popup" id="popup-mesto">
+        <div class="popup__container">
+            <form method="post" class="popup__form" id="form-mesto" action="#" name="mesto">
+                <h2 class="popup__form-heading">Новое место</h2>
+                <fieldset class="popup__form-input">
+                    <input type="text" name="mesto-name" id="mesto-name" class="popup__form-item" placeholder="Название"
+                        required />
+                    <input type="url" name="mesto-url" id="mesto-url" class="popup__form-item"
+                        placeholder="Ссылка на картинку" required />
+                </fieldset>
+                <button class="popup__save-button" type="submit">Создать</button>
+            </form>
+            <button class="popup__close-button" type="button" aria-label="Закрыть модальное окно"></button>
+        </div>
+    </div>
+
+
+    <!-- image-popup-->
+
+    <div class="popup popup_type_image" id="image-popup">
+        <figure class="popup__image-container">
+            <img class="popup__image" src="#" alt="#">
+            <button class="popup__close-button" type="button" aria-label="Закрыть изображение"></button>
+            <figcaption class="popup__caption"></figcaption>
+        </figure>
+    </div>
+
+
+
+    <template id="card-template">
+        <li class="card">
+            <button class="card__delete-button" type="button" aria-label="Удалить карточку"></button>
+            <img class="cards__photo" src="#" alt="">
+            <div class="cards__description">
+                <h2 class="cards__text" text=""></h2>
+                <button class="cards__like-button" type="button" aria-label="Нравится"></button>
+            </div>
+           
+        </li>
+    </template>
+
+
+    <script src="./scripts/script.js"></script>
 </body>
 
 </html>
